@@ -1,5 +1,5 @@
 ### BTest baseline data generated by btest-diff. Do not edit. Use "btest -U/-u" to update. Requires BTest >= 0.63.
-endpoint="manager"
-endpoint="logger-1"
-endpoint="proxy-1"
-endpoint="worker-1"
+node="manager"
+node="logger-1"
+node="proxy-1"
+node="worker-1"
