@@ -47,7 +47,7 @@ services_data=$(curl -s -m 5 ${services_url})
 for host in $(echo ${services_data} | jq -r '.[0].targets[]' | sort); do
 	metrics=$(curl -m 5 --trace trace-${host}.out http://${host}/metrics)
 	if [ $? -eq 0 ] ; then
-		version_info=$(echo ${metrics} | grep -Eo "zeek_version_info\{[^}]+\}" | grep -o 'endpoint="[^"]*"')
+		version_info=$(echo ${metrics} | grep -Eo "zeek_version_info\{[^}]+\}" | grep -o 'node="[^"]*"')
 		echo ${version_info} >> ${output_file};
 	else
 		echo "Failed to request data from ${host}" >> ${output_file}
