@@ -48,6 +48,18 @@ Breaking Changes
 
 	redef EventMetadata::add_missing_remote_network_timestamp = T;
 
+- The "endpoint" label of metrics exposed via Prometheus or the ``telemetry.log``
+  was renamed to "node". This is done for consistency with cluster terminology:
+  The label values have always been the value of ``Cluster::node`, so it's more intuitive
+  to call it. The "endpoint" name originated from a time when the telemetry framework
+  was implemented in Broker.
+
+  To revert to the "endpoint" label, you can do the following, but we strongly
+  suggest to migrate to the new default "node" instead:
+
+	redef Telemetry::metrics_endpoint_label = "endpoint";
+
+
 New Functionality
 -----------------
 
